Sat Nov 15 20:34:23 2014  Tanaka Akira  <akr@fsij.org>

	* internal.h: Include ruby.h and ruby/encoding.h to be
	  includable without prior inclusion.

Sat Nov 15 20:46:44 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb
	  (REXMLTests::TestDocument::EntityExpansionLimitTest):
	  Group tests by general entity and parameter entity.

Sat Nov 15 20:43:31 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb
	  (REXMLTests::TestDocument::EntityExpansionLimitTest): Define
	  test XML in each test method because (1) each XML in used only
	  one test and (2) related data and code should be close.

Sat Nov 15 20:39:06 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb
	  (REXMLTests::TestDocument::EntityExpansionLimitTest): Use
	  one test method for one test.

Sat Nov 15 20:16:59 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb
	  (REXMLTests::TestDocument::EntityExpansionLimitTest): Use
	  setup and teardown instead of ensure in test.

Sat Nov 15 20:11:34 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb (REXMLTests::TestDocument): Group
	  entity expansion limit related tests.

Sat Nov 15 20:09:00 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb (REXMLTests::TestDocument::BomTest):
	  Fix wrong parent class. It doesn't need inherit tests in
	  TestDocument class.

Sat Nov 15 19:48:59 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/mkmf.rb (depend_rules): support comments during a line.

	* lib/mkmf.rb (depend_rules): apply RULE_SUBST even if the dependency
	  file contains path.

Sat Nov 15 19:25:46 2014  Tanaka Akira  <akr@fsij.org>

	* common.mk: Remove comments in Dependency lines.
	  Notified by usa.

	* enc/depend: Ditto.

	* ext/**/depend: Ditto.

Sat Nov 15 16:28:05 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_throw_obj): throw UncaughtThrowError instead of
	  ArgumentError.  [Feature #10480]
