@@ -673,85 +673,7 @@ ia64.$(OBJEXT): {$(VPATH)}ia64.s
 
 ###
 
-addr2line.$(OBJEXT): {$(VPATH)}addr2line.c
-array.$(OBJEXT): {$(VPATH)}array.c
-bignum.$(OBJEXT): {$(VPATH)}bignum.c
-class.$(OBJEXT): {$(VPATH)}class.c
-compar.$(OBJEXT): {$(VPATH)}compar.c
-complex.$(OBJEXT): {$(VPATH)}complex.c
-dir.$(OBJEXT): {$(VPATH)}dir.c
-dln.$(OBJEXT): {$(VPATH)}dln.c
-dln_find.$(OBJEXT): {$(VPATH)}dln_find.c
-dmydln.$(OBJEXT): {$(VPATH)}dmydln.c
-dmyext.$(OBJEXT): {$(VPATH)}dmyext.c
-encoding.$(OBJEXT): {$(VPATH)}encoding.c
-enum.$(OBJEXT): {$(VPATH)}enum.c
-enumerator.$(OBJEXT): {$(VPATH)}enumerator.c
-error.$(OBJEXT): {$(VPATH)}error.c
-eval.$(OBJEXT): {$(VPATH)}eval.c
-load.$(OBJEXT): {$(VPATH)}load.c
-file.$(OBJEXT): {$(VPATH)}file.c
-gc.$(OBJEXT): {$(VPATH)}gc.c
-hash.$(OBJEXT): {$(VPATH)}hash.c
-inits.$(OBJEXT): {$(VPATH)}inits.c
-io.$(OBJEXT): {$(VPATH)}io.c
-main.$(OBJEXT): {$(VPATH)}main.c
-marshal.$(OBJEXT): {$(VPATH)}marshal.c
-math.$(OBJEXT): {$(VPATH)}math.c
-node.$(OBJEXT): {$(VPATH)}node.c
-numeric.$(OBJEXT): {$(VPATH)}numeric.c
-object.$(OBJEXT): {$(VPATH)}object.c
-pack.$(OBJEXT): {$(VPATH)}pack.c
-parse.$(OBJEXT): {$(VPATH)}parse.c
-proc.$(OBJEXT): {$(VPATH)}proc.c
-process.$(OBJEXT): {$(VPATH)}process.c
-random.$(OBJEXT): {$(VPATH)}random.c
-range.$(OBJEXT): {$(VPATH)}range.c
-rational.$(OBJEXT): {$(VPATH)}rational.c
-re.$(OBJEXT): {$(VPATH)}re.c
-regcomp.$(OBJEXT): {$(VPATH)}regcomp.c
-regenc.$(OBJEXT): {$(VPATH)}regenc.c
-regerror.$(OBJEXT): {$(VPATH)}regerror.c
-regexec.$(OBJEXT): {$(VPATH)}regexec.c
-regparse.$(OBJEXT): {$(VPATH)}regparse.c
-regsyntax.$(OBJEXT): {$(VPATH)}regsyntax.c
-ruby.$(OBJEXT): {$(VPATH)}ruby.c
-safe.$(OBJEXT): {$(VPATH)}safe.c
-signal.$(OBJEXT): {$(VPATH)}signal.c
-sprintf.$(OBJEXT): {$(VPATH)}sprintf.c
-st.$(OBJEXT): {$(VPATH)}st.c
-strftime.$(OBJEXT): {$(VPATH)}strftime.c
-string.$(OBJEXT): {$(VPATH)}string.c
-struct.$(OBJEXT): {$(VPATH)}struct.c
-symbol.$(OBJEXT): {$(VPATH)}symbol.c
-thread.$(OBJEXT): {$(VPATH)}thread.c
-transcode.$(OBJEXT): {$(VPATH)}transcode.c
-cont.$(OBJEXT): {$(VPATH)}cont.c
-time.$(OBJEXT): {$(VPATH)}time.c
-util.$(OBJEXT): {$(VPATH)}util.c
-variable.$(OBJEXT): {$(VPATH)}variable.c
-version.$(OBJEXT): {$(VPATH)}version.c
-loadpath.$(OBJEXT): {$(VPATH)}loadpath.c
-localeinit.$(OBJEXT): {$(VPATH)}localeinit.c
-miniinit.$(OBJEXT): {$(VPATH)}miniinit.c
-
-compile.$(OBJEXT): {$(VPATH)}compile.c {$(VPATH)}opt_sc.inc {$(VPATH)}optunifs.inc
-iseq.$(OBJEXT): {$(VPATH)}iseq.c
-vm.$(OBJEXT): {$(VPATH)}vm.c
-vm_dump.$(OBJEXT): {$(VPATH)}vm_dump.c
-debug.$(OBJEXT): {$(VPATH)}debug.c
-id.$(OBJEXT): {$(VPATH)}id.c
-vm_backtrace.$(OBJEXT): {$(VPATH)}vm_backtrace.c
-vm_trace.$(OBJEXT): {$(VPATH)}vm_trace.c
-miniprelude.$(OBJEXT): {$(VPATH)}miniprelude.c
-prelude.$(OBJEXT): {$(VPATH)}prelude.c
-golf_prelude.$(OBJEXT): {$(VPATH)}golf_prelude.c
-goruby.$(OBJEXT): {$(VPATH)}goruby.c
-
-ascii.$(OBJEXT): {$(VPATH)}ascii.c
-us_ascii.$(OBJEXT): {$(VPATH)}us_ascii.c
-unicode.$(OBJEXT): {$(VPATH)}unicode.c
-utf_8.$(OBJEXT): {$(VPATH)}utf_8.c
+compile.$(OBJEXT): {$(VPATH)}opt_sc.inc {$(VPATH)}optunifs.inc
 
 win32/win32.$(OBJEXT): {$(VPATH)}win32/win32.c {$(VPATH)}dln.h {$(VPATH)}dln_find.c \
   {$(VPATH)}internal.h $(RUBY_H_INCLUDES) $(PLATFORM_D)
